[package]
name = "bwks_mon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
chrono = "0.4.38"
now = "0.1.3"
sentry = "0.34.0"
openssl = { version = "0.10", features = ["vendored"] }
ssh2 = "0.9.4"




[profile.release]
opt-level = 3
